static/messages.css
/* ... */
#diagramDlg  button {
 margin-top:5px;
 margin-right:5px;
}
.gant-parent {
  display: block; 
  overflow: auto;
  min-width: 690px;
  min-height: 390px;
  max-width: 800px;
  max-height: 390px;  
  border: #999999 solid 1px;
  border-radius:8px;
}
.Gant {
  display: grid; 
  grid-template-columns: repeat(60, 40px);
  grid-template-rows: repeat(10px); 
  column-gap: 0;
  row-gap: 30px; 
}
.Gant div {
  padding-top: 5px;
  font-size:0.6rem;
  padding-bottom: 5px;
  text-align: center;
  outline: 1px solid rgba(44, 44, 44, 0.1);
}

.task-bar {
    background-color: rgb(58, 97, 253);         
    color: #ffffff;
    padding: 5px 10px;
    border-radius: 4px;
    font-size: 0.9rem;
    white-space: nowrap;
    overflow: hidden;
    text-overflow: ellipsis;
    text-align:center;
    min-height: 20px;
}

.grid-header-dates {
    position: sticky;
    top: 0;           
    background: white; 
    z-index: 20;     
}
.expired_task {
  background: linear-gradient(to right, rgb(58, 97, 253) 70%, #e74c3c 70%)
}

#personal_Dialog{
  display:flexbox;
  flex-direction: column;
}
#personal_Dialog .lsh {
  color: #01197a;
  font-size: 0.9rem;
  padding-bottom:10px;
}
#personal_Dialog textarea, #notesDlg textarea{
  font-family:Arial, Helvetica, sans-serif;
  font-size: 1.1rem;
  background-color: #e3f3ff;
  padding:5px;
  min-height: 80px;
}

dialog button {
  padding: 8px 16px;
  border-radius: 8px;
  border: 1px solid #ccc;
  cursor: pointer;
  margin-top: 15px;
}

dialog button:hover {
  color: #fff;
  background-color: #1c59ff;
}

#showPersSlg {
  display: flex;
  flex-direction: column;
  justify-content: space-between; 
}

#showPersDlg div {
  text-align: right;
}
#showPersDlg h3 {
  font-size: 0.9rem;
  padding-left:20px;
  color:#0a0238;
}
#showPersDlg p {
  padding: 10px 20px 10px 20px;
  border:rgba(204, 229, 255, 0.1);
  background-color: #fff;
}

/* На мобильных устройствах удобно, когда кнопки крупные */
@media (max-width: 480px) {
  #personal_Dialog textarea {
    max-width:95%;
  }
  dialog {
    width: 80%; 
  }

  dialog button {
    width: 100%; /* Кнопки растягиваются на всю ширину */
    margin-left: 0 !important; /* Убираем отступы сбоку */
    margin-top: 10px;
    padding: 12px; /* Увеличиваем область нажатия (удобно для пальца) */
  }
}

/* Стили для затемнения фона за окном */
dialog::backdrop {
  background-color: rgba(0, 0, 0, 0.5); /* Полупрозрачный черный */
  backdrop-filter: blur(3px); /* Легкое размытие заднего плана */
}

/* Простая анимация появления */
@keyframes fadeIn {
  from {
    opacity: 0;
    transform: translateY(-20px);
  }
  to {
    opacity: 1;
    transform: translateY(0);
  }
}

#confirm {
  background-color: #007bff;
  color: white;
  border: none;
  margin-left: 10px;
}

.one-document {
  display: flex;
  flex-direction: row;
  justify-content:space-between;
  font-family:Arial, Helvetica, sans-serif;
  font-size: 1.5rem;
  color:#303444;
  padding-right: 40px;
  padding-bottom:0;
}
.one-document span {
  cursor: pointer;
}
.document-filename {
  font-size: 1.0rem;
  padding-top: 8px;
  margin-left:15px;
}
.docs_notes {
  padding-top:15px;
  font-size: 0.9rem;
  color:#2e2e2e;
  font-weight:normal;
  line-height: 1.2rem;
  padding-bottom:15px;
  padding-left: 5px;
  padding-right: 5px;
}
.one-document .download-span {
  max-height: 12px;
  width: 19px;
  max-width:19px;
  color: #fff;
  background:#63aff1;
  border-radius: 20px;
  padding: 0 0 6px 6px;
  margin-top: 8px;
  min-width: 18px;
}

#userDlg input { 
  width: 200px;
  padding: 9px;
  background:#cef1ff
}

.add_comments {
  margin-top: 10px;
  margin-left:5px;
  font-size: 0.7rem;
  font-style: italic;
  color: #007bff;
  cursor: pointer;
}
.add_comments:hover { color:rgb(6, 51, 237); }

.comments_header {
  font-size: 0.9rem;
  font-weight: bold;
  color: #007bff;
  padding-left:5px;
  cursor: pointer;
}
.comments_header:hover { color:rgb(6, 51, 237); }

.comment_input { 
  margin-top: 5px;
  padding: 4px;
  font-family: Arial, Helvetica, sans-serif;
  font-size: 1.1rem; 
  width:95%;
  align-self: center;
  border-radius: 5px;
}

.comment-button {
  padding: 5px;
  border-radius: 5px;
  border: 2px solid #007bff;
}
.comment-button:hover {
   background: #007bff; 
   color:#fff; 
   border:#fff 2px solid;
   padding: 5px;
}

.one_comment {
  background: #f1f0f0;
  padding: 8px 12px;
  border-radius: 10px;
  margin-top: 5px;
}

.comment_username {
  font-weight: bold;
  font-size: 0.9rem;
  color: #007bff;
  display: block;
  margin-bottom: 4px;
}

.comment_text {
  font-size: 0.9rem;
  font-weight: normal;
  color: #333;
  display: block;
  margin-bottom: 4px;
}

.comment_timestamp {
  width:100%;
  text-align: right;
  font-size: 0.7rem;
  color: #666;
  display: block;
}

.GantParent {
  display:block;
  overflow:auto;
  min-height: 80%;
  min-width: 80%;
}

.button-flex{
  display: flex;
  flex-direction: row-reverse;
}

@media (max-width: 768px) {
  .one-document { padding-right: 0; }

  #diagramDlg {
        width: 100dvh;
        height: 100dvw;
        max-height:100dvw !important;
        position: fixed;
        top: 50%;
        left: 50%;
        transform: translate(-50%, -50%) rotate(90deg);
        margin: 0;
        max-width: none;
        max-height: none;
        border: none;
  }

  #diagramDlg .mobile-flex {
      display: flex !important;
      flex-direction: column;
      justify-content: space-between;         
  }
  #diagramDlg .gant-parent {
    max-width: 760px;
  }

  #close_diagram_btn {
    max-width:140px;
    align-self: center;  
    transform: translate(270%, -250%) rotate(-90deg);
  }
  .Gant div {
    font-size: 0.8rem;
}

}  

